# cnfs

./: Cargo.toml  README.md  source_question.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs
src/sync/: mod.rs  up.rs
src/usrlyr/: file.rs  lyr.rs  mod.rs
src/vfs/: dentry.rs  fs.rs  mnt.rs  mod.rs  path.rs  vinode.rs
tests/: fatfs.rs  mixed.rs  path.rs  stdfs.rs
tests/adapter/: fatfs.rs  mod.rs  stdfs.rs
tests/resources/: fat_1.img  fat_2.img  generate_fs_img.sh
